--- a/1/learn.ipynb
+++ b/1/learn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,18 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_excel(\"../data/data_test.xlsx\")\n",
+    "data = pd.read_excel(\"../data/data_a.xlsx\")\n",
     "dic_file = \"../data/test_dict.txt\"\n",
-    "stop_file = \"../data/test_stopwords.txt\""
+    "stop_file = \"../data/stopwords.txt\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,12 +43,12 @@
     "    \n",
     "    stop_list = []\n",
     "    flag_list = ['n', 'nz', 'vn']\n",
+    "    word_list = []\n",
     "\n",
     "    for line in stopword_list:\n",
     "        line = re.sub(u'\\n|\\\\r', '', line)\n",
     "        stop_list.append(line)\n",
-    "    \n",
-    "        word_list = []\n",
+    "\n",
     "    #jieba分词\n",
     "    seg_list = psg.cut(mytext)\n",
     "    for seg_word in seg_list:\n",
@@ -56,7 +56,7 @@
     "        #word = seg_word.word  #如果想要分析英语文本，注释这行代码，启动下行代码\n",
     "        find = 0\n",
     "        for stop_word in stop_list:\n",
-    "            if stop_word == word or len(word)<2:     #this word is stopword\n",
+    "            if stop_word == word or len(word) < 2:     #this word is stopword\n",
     "                    find = 1\n",
     "                    break\n",
     "        if find == 0 and seg_word.flag in flag_list:\n",
@@ -67,27 +67,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Building prefix dict from the default dictionary ...\n",
-      "Loading model from cache C:\\Users\\legion\\AppData\\Local\\Temp\\jieba.cache\n",
-      "Loading model cost 0.695 seconds.\n",
-      "Prefix dict has been built successfully.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'女生 男生 娱乐'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "chinese_word_cut(\"看#韩素希三问李惠利#有感：#同为女生不该为了臭男生吵架#。”#韩素希指责柳俊烈沉默# 新浪娱乐的微博视频\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "data['content_cutted'] = data.content.apply(chinese_word_cut)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,28 +127,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-1 {color: black;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LatentDirichletAllocation(learning_offset=50, max_iter=50, n_components=8,\n",
-       "                          random_state=0)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LatentDirichletAllocation</label><div class=\"sk-toggleable__content\"><pre>LatentDirichletAllocation(learning_offset=50, max_iter=50, n_components=8,\n",
+       "<style>#sk-container-id-2 {color: black;}#sk-container-id-2 pre{padding: 0;}#sk-container-id-2 div.sk-toggleable {background-color: white;}#sk-container-id-2 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-2 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-2 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-2 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-2 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-2 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-2 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-2 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-2 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-2 div.sk-item {position: relative;z-index: 1;}#sk-container-id-2 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-2 div.sk-item::before, #sk-container-id-2 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-2 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-2 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-2 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-2 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-2 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-2 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-2 div.sk-label-container {text-align: center;}#sk-container-id-2 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-2 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LatentDirichletAllocation(learning_offset=50, max_iter=50, n_components=7,\n",
+       "                          random_state=0)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" checked><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LatentDirichletAllocation</label><div class=\"sk-toggleable__content\"><pre>LatentDirichletAllocation(learning_offset=50, max_iter=50, n_components=7,\n",
        "                          random_state=0)</pre></div></div></div></div></div>"
       ],
       "text/plain": [
-       "LatentDirichletAllocation(learning_offset=50, max_iter=50, n_components=8,\n",
+       "LatentDirichletAllocation(learning_offset=50, max_iter=50, n_components=7,\n",
        "                          random_state=0)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "n_topics = 8\n",
+    "n_topics = 7\n",
     "lda = LatentDirichletAllocation(n_components=n_topics, max_iter=50,\n",
     "                                learning_method='batch',\n",
     "                                learning_offset=50,\n",
@@ -151,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -159,21 +168,19 @@
      "output_type": "stream",
      "text": [
       "Topic #0:\n",
-      "专家 网友 老师 压力 走势 分析 黄金 突破 大盘 问题 股票 建议 新浪 整理 成本 调整 机会 坐堂 趋势 后市 股市 行情 市场 价位 阻力\n",
+      "比赛 球队 火箭 篮板 球员 时间 体育 助攻 奇才 训练 球迷 湖人 体育讯 战胜 问题 主场 状态 俱乐部 领先 机会 内线 时候 火箭队 男篮 对阵\n",
       "Topic #1:\n",
-      "比赛 电子竞技 游戏 项目 总决赛 玩家 冠军 战队 赛事 奖金 赛区 世界 星际争霸 俱乐部 决赛 网吧 活动 现场 时间 职业 大赛 全国 国际 组委会 大奖赛\n",
+      "孩子 研究 银行 时间 新闻 人类 科学家 工作 网友 工作人员 生活 男子 女孩 老师 任务 大家 妈妈 女儿 女生 小孩 开学 小时 人们 年轻人 信用卡\n",
       "Topic #2:\n",
-      "投资 经济 市场 公司 政府 发展 企业 政策 问题 网站 计划 银行 手机 行业 服务 国家 互联网 资金 基金 业务 管理 影响 记者 文章 信息\n",
+      "专家 网友 老师 小米 压力 汽车 黄金 走势 分析 股票 突破 问题 大盘 成本 价格 市场 调整 整理 建议 股价 股市 机会 趋势 大家 坐堂\n",
       "Topic #3:\n",
-      "游戏 研究 时间 科学家 人类 人们 世界 玩家 人员 消息 技术 任务 问题 系统 利用 历史 科技 中心 太空 模式 杂志 科学 公司 过程 汽车\n",
+      "公司 苹果 用户 产品 快讯 市场 平台 记者 网络 业务 发展 科技 手机 信息 内容 品牌 网站 互联网 消费者 技术 服务 消费 行业 销售 地震\n",
       "Topic #4:\n",
-      "学生 大学 学校 教育 工作 专业 移民 孩子 问题 语言 留学生 情况 能力 国家 家长 计划 国际 课程 论文 英语 生活 费用 学费 培训 家庭\n",
+      "电影 主持人 大家 票房 时候 影片 娱乐 观众 演员 故事 作品 现场 朋友 角色 合作 人生 感觉 电影节 市场 考研 主演 时间 公司 生活 内地\n",
       "Topic #5:\n",
-      "电影 主持人 票房 影片 观众 演员 作品 朋友 故事 新浪 感觉 合作 娱乐 电影节 现场 角色 记者 时间 主演 媒体 投票 生活 方面 市场 香港电影\n",
+      "经济 政府 计划 国家 公司 总统 投资 记者 问题 时间 国际 企业 全球 发展 员工 事件 人员 世界 市场 媒体 新闻 主席 地带 政策 项目\n",
       "Topic #6:\n",
-      "比赛 主队 赔率 球队 主场 客场 火箭 球员 数据 时间 篮板 奇才 公司 本场 足彩 情况 客胜 联赛 状态 问题 体育讯 新浪 助攻 机会 优势\n",
-      "Topic #7:\n",
-      "项目 建筑 生活 发展 地产 新浪 空间 区域 户型 活动 房子 别墅 设计 主持人 文化 产品 国际 市场 中心 艺术 论坛 集团 地方 开发商 客户\n"
+      "学生 学校 大学 教育 建议 工作 问题 专业 国家 教师 基金 全国 移民 委员 社会 情况 留学生 语言 政策 成绩 影响 课程 家庭 女性 孩子\n"
      ]
     }
    ],
@@ -185,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,13 +212,6 @@
     "data['每个主题对应概率']=list(topics)\n",
     "data.to_excel(\"data_topic.xlsx\",index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
