modified:   backend/__pycache__/database.cpython-311.pyc 	modified:   backend/__pycache__/main.cpython-311.pyc 	modified:   backend/__pycache__/model.cpython-311.pyc 	modified:   backend/database.py 	modified:   backend/main.py 	modified:   backend/model.py 	deleted:    backend/spider/weibo/users.csv 	deleted:    backend/test_main.py 	modified:   frontend/package-lock.json 	modified:   frontend/package.json 	modified:   frontend/src/api/weibo.ts 	modified:   frontend/src/pages/weibo/index.tsx 	new file:   frontend/src/type/index.d.ts 	new file:   frontend/src/type/weibo.d.ts 	modified:   model/1/11.py 	modified:   model/1/aa.ipynb

--- a/model/1/aa.ipynb
+++ b/model/1/aa.ipynb
@@ -297,6 +297,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "163\n",
+      "667\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1001):\n",
+    "    if i % 7 == 2 and i % 8 == 3 and i % 9 == 1:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "9 % 3"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
