--- a/model/1/aa.ipynb
+++ b/model/1/aa.ipynb
@@ -337,6 +337,95 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "InsertOneResult(ObjectId('661ce0154414b4d0f3996939'), acknowledged=True)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pymongo\n",
+    "from datetime import datetime\n",
+    "\n",
+    "client = pymongo.MongoClient(host='127.0.0.1:27017')\n",
+    "collection = client['whut_final']['user']\n",
+    "\n",
+    "now = datetime.now()\n",
+    "formatted_time = now.strftime(\"%Y-%m-%dT%H:%M:%S\")\n",
+    "\n",
+    "data = {\n",
+    "    \"username\": \"123\",\n",
+    "    \"nickname\": \"456\",\n",
+    "    \"password\": \"123\",\n",
+    "    \"sex\": \"male\",\n",
+    "    \"status\": \"on\",\n",
+    "    \"role\": \"user\",\n",
+    "    \"created_at\": formatted_time\n",
+    "}\n",
+    "\n",
+    "\n",
+    "\n",
+    "collection.insert_one(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('661ce0154414b4d0f3996939'), 'username': '123', 'nickname': '456', 'password': '123', 'sex': 'male', 'status': 'on', 'role': 'user', 'created_at': '2024-04-15T16:06:45'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pymongo\n",
+    "client = pymongo.MongoClient(host='127.0.0.1:27017')\n",
+    "collection = client['whut_final']['user']\n",
+    "\n",
+    "cursor = collection.find({}).sort(\"created_at\", -1)\n",
+    "for document in cursor:\n",
+    "    print(document)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [422]>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "\n",
+    "data = {'username': \"12356\", 'nickname': \"ddddd\", 'password': \"weqeqwe\", 'sex': \"male\", 'status': \"on\", 'role': \"user\"}\n",
+    "\n",
+    "requests.post(\"http://127.0.0.1:8000/users/\",data)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
