--- a/model/1/aa.ipynb
+++ b/model/1/aa.ipynb
@@ -337,16 +337,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "InsertOneResult(ObjectId('661ce0154414b4d0f3996939'), acknowledged=True)"
+       "InsertOneResult(ObjectId('661cf41175bedcd557c11e8e'), acknowledged=True)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,13 +362,14 @@
     "formatted_time = now.strftime(\"%Y-%m-%dT%H:%M:%S\")\n",
     "\n",
     "data = {\n",
-    "    \"username\": \"123\",\n",
+    "    \"username\": \"test\",\n",
     "    \"nickname\": \"456\",\n",
     "    \"password\": \"123\",\n",
     "    \"sex\": \"male\",\n",
     "    \"status\": \"on\",\n",
     "    \"role\": \"user\",\n",
-    "    \"created_at\": formatted_time\n",
+    "    # \"created_at\": formatted_time\n",
+    "    \"id\": \"3\",\n",
     "}\n",
     "\n",
     "\n",
@@ -401,16 +402,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Response [422]>"
+       "<Response [200]>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +422,30 @@
     "\n",
     "data = {'username': \"12356\", 'nickname': \"ddddd\", 'password': \"weqeqwe\", 'sex': \"male\", 'status': \"on\", 'role': \"user\"}\n",
     "\n",
-    "requests.post(\"http://127.0.0.1:8000/users/\",data)"
+    "requests.post(\"http://127.0.0.1:8000/users/\",json.dumps(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "uuid3() missing 2 required positional arguments: 'namespace' and 'name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01muuid\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m uuid\u001b[38;5;241m.\u001b[39muuid3()\n",
+      "\u001b[1;31mTypeError\u001b[0m: uuid3() missing 2 required positional arguments: 'namespace' and 'name'"
+     ]
+    }
+   ],
+   "source": [
+    "import uuid\n",
+    "\n",
+    "uuid.uuid3()"
    ]
   },
   {
