--- a/model/1/aa.ipynb
+++ b/model/1/aa.ipynb
@@ -427,25 +427,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pymongo\n",
+    "client = pymongo.MongoClient(host='127.0.0.1:27017')\n",
+    "collection = client['whut_final']['user']\n",
+    "\n",
+    "login_user = collection.find_one({\"username\": \"12356\"})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "uuid3() missing 2 required positional arguments: 'namespace' and 'name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[11], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01muuid\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m uuid\u001b[38;5;241m.\u001b[39muuid3()\n",
-      "\u001b[1;31mTypeError\u001b[0m: uuid3() missing 2 required positional arguments: 'namespace' and 'name'"
-     ]
+     "data": {
+      "text/plain": [
+       "'weqeqwe'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import uuid\n",
-    "\n",
-    "uuid.uuid3()"
+    "login_user['password']"
    ]
   },
   {
