--- a/model/1/aa.ipynb
+++ b/model/1/aa.ipynb
@@ -379,25 +379,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'_id': ObjectId('661ce0154414b4d0f3996939'), 'username': '123', 'nickname': '456', 'password': '123', 'sex': 'male', 'status': 'on', 'role': 'user', 'created_at': '2024-04-15T16:06:45'}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "UpdateResult({'n': 70, 'nModified': 70, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import pymongo\n",
     "client = pymongo.MongoClient(host='127.0.0.1:27017')\n",
-    "collection = client['whut_final']['user']\n",
+    "collection = client['whut_final']['weibo']\n",
     "\n",
-    "cursor = collection.find({}).sort(\"created_at\", -1)\n",
-    "for document in cursor:\n",
-    "    print(document)\n"
+    "new_att = \"spider_time\"\n",
+    "new_value = \"2024-01-15T16:06:45\"\n",
+    "collection.update_many({}, {\"$set\": {new_att: new_value}})"
    ]
   },
   {
