--- a/model/1/aa.ipynb
+++ b/model/1/aa.ipynb
@@ -337,44 +337,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pymongo\n",
+    "from datetime import datetime\n",
+    "\n",
+    "fields = {'id': 1, 'user_id': 1, 'screen_name': 1, 'text': 1, 'created_at': 1, 'topics': 1,}\n",
+    "config = {\n",
+    "    'user_id_list': ['2609400635'],\n",
+    "}\n",
+    "weibos = []\n",
+    "\n",
+    "client = pymongo.MongoClient(host='127.0.0.1:27017')\n",
+    "# weibo_collection = client['whut_final']['weibo']\n",
+    "spider_collection = client['test']['weibo']\n",
+    "\n",
+    "cursor = spider_collection.find({\"user_id\": 2609400635}, fields)\n",
+    "for document in cursor:\n",
+    "    now = datetime.now()\n",
+    "    document['category'] = '娱乐'\n",
+    "    document['spider_time'] = now.strftime(\"%Y-%m-%dT%H:%M:%S\")\n",
+    "    weibos.append(document)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "InsertOneResult(ObjectId('661cf41175bedcd557c11e8e'), acknowledged=True)"
+       "InsertManyResult([ObjectId('6624c46517ab9704a7919666')], acknowledged=True)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pymongo\n",
-    "from datetime import datetime\n",
-    "\n",
-    "client = pymongo.MongoClient(host='127.0.0.1:27017')\n",
-    "collection = client['whut_final']['user']\n",
-    "\n",
-    "now = datetime.now()\n",
-    "formatted_time = now.strftime(\"%Y-%m-%dT%H:%M:%S\")\n",
-    "\n",
-    "data = {\n",
-    "    \"username\": \"test\",\n",
-    "    \"nickname\": \"456\",\n",
-    "    \"password\": \"123\",\n",
-    "    \"sex\": \"male\",\n",
-    "    \"status\": \"on\",\n",
-    "    \"role\": \"user\",\n",
-    "    # \"created_at\": formatted_time\n",
-    "    \"id\": \"3\",\n",
-    "}\n",
-    "\n",
-    "\n",
-    "\n",
-    "collection.insert_one(data)"
+    "weibo_collection = client['whut_final']['weibo']\n",
+    "weibo_collection.insert_many(weibos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('6624bdf48719ca2ea01635c3'), 'user_id': 1630856882, 'screen_name': '陶喆', 'id': 5025597174318851, 'bid': 'OaJTLi7wT', 'text': '昨晚開場前說要給大家展示我的功夫，沒想到真的意外上演了一段“鯉魚打挺”，有點不好意思😹\\n因為這兩天不穩定的雷雨天氣，大家趕來現場都辛苦了，希望昨晚大家都還好\\n相聚不易，佛山Day2，我依然會努力把我的全部給你們！今晚見囉！#陶喆佛山演唱会##陶喆SoulPowerII世界巡回演唱会# ', 'article_url': '', 'pics': 'https://wx1.sinaimg.cn/large/001MmUnggy1hoyd90ysanj62zf4h4u0z02.jpg,https://wx1.sinaimg.cn/large/001MmUnggy1hoyd8xzc23j63344mo1kz02.jpg,https://wx4.sinaimg.cn/large/001MmUnggy1hoyd920uc0j63gg56o1l102.jpg,https://wx2.sinaimg.cn/large/001MmUnggy1hoyd95lo1hj63344mohe302.jpg,https://wx4.sinaimg.cn/large/001MmUnggy1hoyd94nd7pj64mo334b2f02.jpg,https://wx2.sinaimg.cn/large/001MmUnggy1hoyd91kk97j62yq4g3npg02.jpg,https://wx3.sinaimg.cn/large/001MmUnggy1hoyd8vc1qij633s4no1ky02.jpg,https://wx2.sinaimg.cn/large/001MmUnggy1hoyd90m373j63ie59l7wk02.jpg,https://wx4.sinaimg.cn/large/001MmUnggy1hoyd9435cdj664w439b2e02.jpg,https://wx3.sinaimg.cn/large/001MmUnggy1hoyd92quivj664w4391l102.jpg,https://wx1.sinaimg.cn/large/001MmUnggy1hoyd8z68rzj64mo334kjn02.jpg,https://wx1.sinaimg.cn/large/001MmUnggy1hoyd92kjqwj64mo334qv802.jpg,https://wx4.sinaimg.cn/large/001MmUnggy1hoyd96dn63j656s3hkhe302.jpg,https://wx2.sinaimg.cn/large/001MmUnggy1hoyd93aqawj656f318u1102.jpg', 'video_url': '', 'location': '', 'created_at': '2024-04-21T14:00:00', 'source': '微博网页版', 'attitudes_count': 9743, 'comments_count': 2549, 'reposts_count': 2789, 'topics': '陶喆佛山演唱会,陶喆SoulPowerII世界巡回演唱会', 'at_users': '', 'full_created_at': '2024-04-21 14:00:00'}\n",
+      "{'_id': ObjectId('6624bdf48719ca2ea01635c4'), 'user_id': 1630856882, 'screen_name': '陶喆', 'id': 5025305251810050, 'bid': 'OaCiV7ASm', 'text': '暴雨天氣大家一定要注意安全[合十]慢慢來有序進場～讓我們稍晚些見面，我會一直在這裡等著大家🫶#陶喆佛山演唱会##陶喆SoulPowerII世界巡回演唱会# ', 'article_url': '', 'pics': 'https://wx2.sinaimg.cn/large/001MmUnggy1hoxgy4wmxxj64jk3111l302.jpg', 'video_url': '', 'location': '', 'created_at': '2024-04-20T18:40:00', 'source': '微博网页版', 'attitudes_count': 9785, 'comments_count': 1991, 'reposts_count': 2144, 'topics': '陶喆佛山演唱会,陶喆SoulPowerII世界巡回演唱会', 'at_users': '', 'full_created_at': '2024-04-20 18:40:00'}\n",
+      "{'_id': ObjectId('6624bdf48719ca2ea01635c5'), 'user_id': 1630856882, 'screen_name': '陶喆', 'id': 5025295297413603, 'bid': 'OaC2Rv6Cf', 'text': 'A-LINK with DT🔗\\n妹子@天生歌姬A-Lin 今晚在佛山我們一起加油喔！🤘#ALin佛山演唱会##A-Link with Passengers# ', 'article_url': '', 'pics': 'https://wx3.sinaimg.cn/large/001MmUnggy1hoxfloruwyj61sc2dse8102.jpg,https://wx3.sinaimg.cn/large/001MmUnggy1hoxflo0l9dj61sc2dshdt02.jpg', 'video_url': '', 'location': '', 'created_at': '2024-04-20T18:00:27', 'source': 'iPhone客户端', 'attitudes_count': 9905, 'comments_count': 2311, 'reposts_count': 2318, 'topics': 'ALin佛山演唱会,A-Link with Passengers', 'at_users': '天生歌姬A-Lin', 'full_created_at': '2024-04-20 18:00:27'}\n",
+      "{'_id': ObjectId('6624bdf48719ca2ea01635c6'), 'user_id': 1630856882, 'screen_name': '陶喆', 'id': 5025189555601645, 'bid': 'Oazijnvf7', 'text': '相信再困難的天氣也阻擋不了我們即將相見的心。大家在來的路上一定要注意安全🙏今晚讓我們互相給彼此Power!#陶喆佛山演唱会##陶喆SoulPowerII世界巡回演唱会# ', 'article_url': '', 'pics': 'https://wx2.sinaimg.cn/large/001MmUnggy1howoieldz0j64mo334npe02.jpg,https://wx3.sinaimg.cn/large/001MmUnggy1howoiffarej60ye1fuhdt02.jpg,https://wx2.sinaimg.cn/large/001MmUnggy1howoigk00jj61og14ae8202.jpg,https://wx1.sinaimg.cn/large/001MmUnggy1howoijrieej64o033s4qu02.jpg,https://wx3.sinaimg.cn/large/001MmUnggy1howoimngkmj64mo334u1102.jpg,https://wx1.sinaimg.cn/large/001MmUnggy1howoipu1irj64mo334qv602.jpg', 'video_url': '', 'location': '', 'created_at': '2024-04-20T11:00:16', 'source': 'iPhone客户端', 'attitudes_count': 11005, 'comments_count': 2374, 'reposts_count': 2330, 'topics': '陶喆佛山演唱会,陶喆SoulPowerII世界巡回演唱会', 'at_users': '', 'full_created_at': '2024-04-20 11:00:16'}\n",
+      "{'_id': ObjectId('6624bdf48719ca2ea01635c7'), 'user_id': 1630856882, 'screen_name': '陶喆', 'id': 5024940409225756, 'bid': 'OasOsCI2w', 'text': '#我想和你唱收官##我想和你唱# 今晚我回來了！😎和擦肩而過的兄妹搭子@容祖儿 一起回來了！上次來是節目開播的第一期，這次來是第五季的收官夜，竟然也有8年之久了...但大家的熱情不減❤️🔥音樂不停，今晚22:00繼續嗨唱！🤘 ', 'article_url': '', 'pics': 'https://wx3.sinaimg.cn/large/001MmUnggy1how6qa2d1ej61jk2rjb2b02.jpg,https://wx4.sinaimg.cn/large/001MmUnggy1how6qbr8eoj62wc1kye8302.jpg,https://wx3.sinaimg.cn/large/001MmUnggy1how6qe54hwj62tc480b2d02.jpg,https://wx4.sinaimg.cn/large/001MmUnggy1how6qk28gdj65xb3yakjw02.jpg,https://wx4.sinaimg.cn/large/001MmUnggy1how6qpydilj63uo5rw1l502.jpg,https://wx1.sinaimg.cn/large/001MmUnggy1how6qw9laij63ya5xbkjs02.jpg,https://wx4.sinaimg.cn/large/001MmUnggy1how6r2i1r6j63ya5xbx6w02.jpg,https://wx3.sinaimg.cn/large/001MmUnggy1how6r8wohaj66bk47snpi02.jpg,https://wx1.sinaimg.cn/large/001MmUnggy1how6re9dtbj647s6bke8702.jpg,https://wx4.sinaimg.cn/large/001MmUnggy1how6rknl6rj63vz5tvx6v02.jpg,https://wx3.sinaimg.cn/large/001MmUnggy1how6q8fv0lj63344monph02.jpg', 'video_url': '', 'location': '', 'created_at': '2024-04-19T18:30:15', 'source': 'iPhone客户端', 'attitudes_count': 9857, 'comments_count': 2463, 'reposts_count': 2761, 'topics': '我想和你唱收官,我想和你唱', 'at_users': '容祖儿', 'full_created_at': '2024-04-19 18:30:15'}\n",
+      "{'_id': ObjectId('6624c46517ab9704a7919666'), 'user_id': 2609400635, 'screen_name': 'TFBOYS-王俊凯', 'id': 5020101705990504, 'bid': 'O8qW6p8p2', 'text': '今晚一起来@Champion中国官方帐号 玩心派对！#全凭玩心奔赴热爱#走进有趣的妙想世界，看看#Champion×王俊凯联名系列#玩心灵感，以及我的#Champion#玩心OOTD！ \\nChampion中国官方帐号的微博视频\\n ', 'article_url': '', 'pics': '', 'video_url': 'https://f.video.weibocdn.com/o0/qmFkGEunlx08dRDWa3du0104120047gk0E010.mp4?label=mp4_720p&template=720x1280.24.0&ori=0&ps=1CwnkDw1GXwCQx&Expires=1713689372&ssig=ertAQfomgZ&KID=unistore,video', 'location': '', 'created_at': '2024-04-06T10:02:57', 'source': '微博视频号', 'attitudes_count': 1096399, 'comments_count': 738258, 'reposts_count': 1000000, 'topics': '全凭玩心奔赴热爱,Champion×王俊凯联名系列,Champion', 'at_users': 'Champion中国官方帐号', 'full_created_at': '2024-04-06 10:02:57'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in spider_collection.find():\n",
+    "    print(i)"
    ]
   },
   {
@@ -405,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +443,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,9 +452,9 @@
     "import requests\n",
     "import json\n",
     "\n",
-    "data = {'username': \"12356\", 'nickname': \"ddddd\", 'password': \"weqeqwe\", 'sex': \"male\", 'status': \"on\", 'role': \"user\"}\n",
+    "data = {'weibo_user_id': \"22\", 'since_date': \"33\", 'start_page': \"32\", 'cookie': \"1\"}\n",
     "\n",
-    "requests.post(\"http://127.0.0.1:8000/users/\",json.dumps(data))"
+    "requests.delete(\"http://127.0.0.1:8000/api/weibos/5020101705990504\")"
    ]
   },
   {
