--- a/model/1/aa.ipynb
+++ b/model/1/aa.ipynb
@@ -434,16 +434,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('661ce0154414b4d0f3996939'), 'username': '123', 'nickname': '456', 'password': '123', 'sex': 'male', 'status': 'on', 'role': 'user', 'created_at': '2024-04-15T16:06:45', 'id': '1'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pymongo\n",
+    "client = pymongo.MongoClient(host='127.0.0.1:27017')\n",
+    "collection = client['whut_final']['user']\n",
+    "\n",
+    "login_user = collection.find_one({\"username\": \"123\"})\n",
+    "print(login_user)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Response [200]>"
+       "'{\"detail\":\"Method Not Allowed\"}'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,9 +474,10 @@
     "import requests\n",
     "import json\n",
     "\n",
-    "data = {'weibo_user_id': \"22\", 'since_date': \"33\", 'start_page': \"32\", 'cookie': \"1\"}\n",
+    "data = {'username': \"123\", 'password': \"123\"}\n",
     "\n",
-    "requests.delete(\"http://127.0.0.1:8000/api/weibos/5020101705990504\")"
+    "response = requests.post(\"http://127.0.0.1:8000/api/login\", data=data)\n",
+    "response.text"
    ]
   },
   {
@@ -489,6 +512,22 @@
    "source": [
     "login_user['password']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "expected ':' (1285545097.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    if {'_id': ObjectId('661ce0154414b4d0f3996939'), 'username': '123', 'nickname': '456', 'password': '123', 'sex': 'male', 'status': 'on', 'role': 'user', 'created_at': '2024-04-15T16:06:45', 'id': '1'}\u001b[0m\n\u001b[1;37m                                                                                                                                                                                                            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m expected ':'\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
