--- a/model/1/aa.ipynb
+++ b/model/1/aa.ipynb
@@ -462,7 +462,7 @@
     {
      "data": {
       "text/plain": [
-       "'{\"detail\":\"Method Not Allowed\"}'"
+       "'{\"nickname\":\"456\"}'"
       ]
      },
      "execution_count": 5,
@@ -476,7 +476,7 @@
     "\n",
     "data = {'username': \"123\", 'password': \"123\"}\n",
     "\n",
-    "response = requests.post(\"http://127.0.0.1:8000/api/login\", data=data)\n",
+    "response = requests.post(\"http://127.0.0.1:8000/api/login\", data=json.dumps(data))\n",
     "response.text"
    ]
   },
