--- a/model/1/aa.ipynb
+++ b/model/1/aa.ipynb
@@ -515,19 +515,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "\n",
+    "datas = []\n",
+    "\n",
+    "headers = {\n",
+    "    'user-agent': \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/124.0.0.0 Safari/537.36\",\n",
+    "}\n",
+    "\n",
+    "response = requests.get(\"https://www.weibo.com/ajax/side/hotSearch\", headers=headers)\n",
+    "response = json.loads(response.text)\n",
+    "\n",
+    "for i in range(6):\n",
+    "    datas.append(response['data']['realtime'][i]['word'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "expected ':' (1285545097.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    if {'_id': ObjectId('661ce0154414b4d0f3996939'), 'username': '123', 'nickname': '456', 'password': '123', 'sex': 'male', 'status': 'on', 'role': 'user', 'created_at': '2024-04-15T16:06:45', 'id': '1'}\u001b[0m\n\u001b[1;37m                                                                                                                                                                                                            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m expected ':'\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['耙耙柑是讨好型水果吧',\n",
+       " '沈阳发生持刀伤人嫌犯被抓',\n",
+       " '文化中国行',\n",
+       " 'iQOO Z9系列发布',\n",
+       " '狗头萝莉公开煎饼摊收支结余',\n",
+       " '官方再通报种地交钱事件']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "datas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = json.loads(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'耙耙柑是讨好型水果吧'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response['data']['realtime'][0]['word']"
+   ]
   },
   {
    "cell_type": "code",
