Complement the welcome page chart

--- a/model/1/aa.ipynb
+++ b/model/1/aa.ipynb
@@ -317,22 +317,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "datetime.date(2024, 4, 26)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "9 % 3"
+    "from datetime import datetime, date\n",
+    "\n",
+    "today = datetime.today().strftime('%Y-%m-%d')\n",
+    "a = date.fromisoformat(today)\n",
+    "a"
    ]
   },
   {
@@ -434,24 +438,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'_id': ObjectId('661ce0154414b4d0f3996939'), 'username': '123', 'nickname': '456', 'password': '123', 'sex': 'male', 'status': 'on', 'role': 'user', 'created_at': '2024-04-15T16:06:45', 'id': '1'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pymongo\n",
     "client = pymongo.MongoClient(host='127.0.0.1:27017')\n",
-    "collection = client['whut_final']['user']\n",
+    "collection_spider = client['test']['weibo']\n",
+    "collection = client['whut_final']['weibo']\n",
     "\n",
-    "login_user = collection.find_one({\"username\": \"123\"})\n",
-    "print(login_user)"
+    "if collection.find_one({\"id\": 5020101705990504}):\n",
+    "    print(\"yes\")"
    ]
   },
   {
