analysis page main_info

--- a/model/1/aa.ipynb
+++ b/model/1/aa.ipynb
@@ -438,22 +438,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('6624bdf08719ca2ea01635c1'), 'id': '1630856882', 'screen_name': '陶喆', 'statuses_count': 1428, 'followers_count': 3529000, 'description': 'Bonbon出生、新專輯籌備、巡迴唱會籌備，忙翻了！', 'verified_reason': '台湾音乐人，代表作《爱很简单》《黑色柳丁》《就是爱你》等'}\n"
+     ]
+    }
+   ],
    "source": [
     "import pymongo\n",
     "client = pymongo.MongoClient(host='127.0.0.1:27017')\n",
     "collection_spider = client['test']['weibo']\n",
     "collection = client['whut_final']['weibo']\n",
+    "collection_poster = client['test']['user']\n",
     "\n",
-    "if collection.find_one({\"id\": 5020101705990504}):\n",
-    "    print(\"yes\")"
+    "fields = {'id': 1, 'screen_name': 1, 'statuses_count': 1, 'followers_count': 1, 'description': 1, 'verified_reason': 1,}\n",
+    "\n",
+    "poster = collection_poster.find_one({\"id\": '1630856882'}, fields)\n",
+    "print(poster)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main_data = [\n",
+    "    { 'label': \"博主id\"},\n",
+    "    { 'label': \"用户昵称\"},\n",
+    "    { 'label': \"微博数\"},\n",
+    "    { 'label': \"粉丝数\"},\n",
+    "    { 'label': \"用户描述\"},\n",
+    "    { 'label': \"用户简介\"},\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 0\n",
+    "\n",
+    "for key, value in list(poster.items())[1:]:\n",
+    "    if i == 0:\n",
+    "        continue\n",
+    "    main_data[i]['value'] = value\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': '博主id', 'value': ObjectId('6624bdf08719ca2ea01635c1')},\n",
+       " {'label': '用户昵称', 'value': '1630856882'},\n",
+       " {'label': '微博数', 'value': '陶喆'},\n",
+       " {'label': '粉丝数', 'value': 1428},\n",
+       " {'label': '用户描述', 'value': 3529000},\n",
+       " {'label': '用户简介', 'value': 'Bonbon出生、新專輯籌備、巡迴唱會籌備，忙翻了！'}]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "main_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +536,7 @@
        "'{\"nickname\":\"456\"}'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
