--- a/model/1/aa.ipynb
+++ b/model/1/aa.ipynb
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,36 +487,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "i = 0\n",
     "\n",
     "for key, value in list(poster.items())[1:]:\n",
-    "    if i == 0:\n",
-    "        continue\n",
     "    main_data[i]['value'] = value\n",
     "    i += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'label': '博主id', 'value': ObjectId('6624bdf08719ca2ea01635c1')},\n",
-       " {'label': '用户昵称', 'value': '1630856882'},\n",
-       " {'label': '微博数', 'value': '陶喆'},\n",
-       " {'label': '粉丝数', 'value': 1428},\n",
-       " {'label': '用户描述', 'value': 3529000},\n",
-       " {'label': '用户简介', 'value': 'Bonbon出生、新專輯籌備、巡迴唱會籌備，忙翻了！'}]"
+       "[{'label': '博主id', 'value': '1630856882'},\n",
+       " {'label': '用户昵称', 'value': '陶喆'},\n",
+       " {'label': '微博数', 'value': 1428},\n",
+       " {'label': '粉丝数', 'value': 3529000},\n",
+       " {'label': '用户描述', 'value': 'Bonbon出生、新專輯籌備、巡迴唱會籌備，忙翻了！'},\n",
+       " {'label': '用户简介', 'value': '台湾音乐人，代表作《爱很简单》《黑色柳丁》《就是爱你》等'}]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
